All_Component_DX/force-app/main/default/objects/SM_Scheduling_Event_Summary__c/SM_Scheduling_Event_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Holds the Event details run by Scheduling Engine</description>
    <label>Scheduling Event Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Event Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>