All_Component_DX/force-app/main/default/objects/SM_Scheduling_Event_Summary__c/fields/SM_Break_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SM_Break_Minutes__c</fullName>
    <description>Time during which the technician takes a break.</description>
    <inlineHelpText>Time during which the technician takes a break.</inlineHelpText>
    <label>Break Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>