All_Component_DX/force-app/main/default/objects/SM_Scheduling_Event_Summary__c/fields/SM_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Event_Date__c</fullName>
    <description>Event start date</description>
    <inlineHelpText>Event start date</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>