All_Component_DX/force-app/main/default/objects/SM_Scheduling_Event_Summary__c/fields/SM_Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>SM_Event_Duration__c</fullName>
    <description>Event Duration</description>
    <inlineHelpText>Event Duration</inlineHelpText>
    <label>Event Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>