All_Component_DX/force-app/main/default/objects/SM_Scheduling_Event_Summary__c/fields/SM_Job_Summary__c.field-meta.xml
<CustomField>
    <fullName>SM_Job_Summary__c</fullName>
    <description>Master-Detail relationship to Scheduling Job Summary table</description>
    <inlineHelpText>Master-Detail relationship to Scheduling Job Summary table</inlineHelpText>
    <label>Job Summary</label>
    <referenceTo>SM_Scheduling_Job_Summary__c</referenceTo>
    <relationshipLabel>Scheduling Event Summaries</relationshipLabel>
    <relationshipName>Scheduling_Event_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>