All_Component_DX/force-app/main/default/objects/SM_Scheduling_Event_Summary__c/fields/SM_Overhead_time__c.field-meta.xml
<CustomField>
    <fullName>SM_Overhead_time__c</fullName>
    <description>Summation of Overtime Before and After Field from Event Object</description>
    <inlineHelpText>Summation of Overtime Before and After Field from Event Object</inlineHelpText>
    <label>Overhead time (mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>